# Kuriume

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README_CN.md  index.html  justfile  package-lock.json  package.json  release-please-config.json  vite.config.ts
.github/workflows/: release.yml
assets/: preview.webm
openspec/: config.yaml
openspec/changes/archive/2026-04-12-desktop-sidebar-fix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-desktop-sidebar-fix/specs/inline-source-selection/: spec.md
openspec/changes/archive/2026-04-12-mobile-redesign/: design.md  tasks.md
openspec/changes/archive/2026-04-12-mobile-redesign/specs/inline-source-selection/: spec.md
openspec/changes/mobile-redesign/: proposal.md  tasks.md
openspec/changes/mobile-redesign/specs/mobile-video-sniffer/: spec.md
openspec/specs/inline-source-selection/: spec.md
openspec/specs/mobile-layout/: spec.md
openspec/specs/mobile-touch-actions/: spec.md
scripts/: build-mpv-ios-sim.sh  build-mpv-ios.sh  bundle-libs-macos.sh  bundle-libs-windows.py
src/: main.css  main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  sniffer.json
src-tauri/crates/kuriume-mpv/: Cargo.toml
src-tauri/crates/kuriume-mpv/src/: error.rs  event.rs  lib.rs  player.rs  protocol.rs  render.rs
src-tauri/crates/kuriume-provider/: Cargo.toml
src-tauri/crates/kuriume-provider/src/: bangumi.rs  builtin_rules.rs  dmhy.rs  error.rs  lib.rs  mikan.rs  models.rs  nyaa.rs  provider.rs  rule.rs  torrent_provider.rs
src-tauri/crates/kuriume-provider/tests/: agedm.rs  bangumi.rs
src-tauri/crates/kuriume-store/: Cargo.toml
src-tauri/crates/kuriume-store/src/: lib.rs  store.rs
src-tauri/crates/kuriume-torrent/: Cargo.toml
src-tauri/crates/kuriume-torrent/src/: engine.rs  error.rs  lib.rs  server.rs
src-tauri/crates/tauri-plugin-mpv/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-mpv/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-mpv/permissions/autogenerated/commands/: player_destroy.toml  player_get_state.toml  player_init.toml  player_set_buffer_size.toml  player_set_subtitle_track.toml  player_set_viewport.toml  player_stop.toml
src-tauri/crates/tauri-plugin-mpv/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-mpv/src/: platform.rs
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-mpv/: Cargo.toml
src-tauri/plugins/tauri-plugin-mpv/permissions/: default.toml
src-tauri/plugins/tauri-plugin-mpv/permissions/autogenerated/commands/: player_get_hwdec.toml  player_get_volume.toml  player_play.toml  player_seek.toml  player_set_audio_track.toml  player_set_hwdec.toml  player_set_paused.toml  player_set_speed.toml  player_set_volume.toml
src-tauri/plugins/tauri-plugin-mpv/src/: commands.rs  lib.rs  platform.rs
src-tauri/plugins/tauri-plugin-mpv/src/platform/: android.rs  ios.rs  macos.rs  windows.rs
src-tauri/src/: commands.rs  frame_server.rs  lib.rs  main.rs  native_view.rs  online_commands.rs  player_commands.rs  store_commands.rs  torrent_commands.rs
src-tauri/src/commands/: anime.rs
src/components/: HeroBanner.tsx  anime-detail.tsx  anime-grid.tsx  anime-row.tsx  bottom-tab-bar.tsx  hero-banner.tsx  mpv-canvas.tsx  search-panel.tsx  sidebar.tsx  source-picker-dialog.tsx  torrent-player.tsx  video-player.tsx
src/components/ui/: button.tsx  popover.tsx  toggle.tsx  tooltip.tsx
src/hooks/: use-mikan-torrents.ts  use-online-source.ts  use-player-gestures.ts  use-player.ts  use-torrent-source.ts  use-torrent-stream.ts  use-video-sniffer.ts
src/lib/: mikan.ts  mock-data.ts  online-source.ts  player.ts  query-client.ts  store.ts  torrent-source.ts  torrent.ts  types.ts  use-mikan-torrents.ts  use-player.ts  use-torrent-stream.ts
src/routes/: __root.tsx  calendar.tsx  history.tsx  index.tsx  me.tsx  search.tsx  settings.tsx  watchlist.tsx
src/routes/anime/: $id.tsx
src/routes/anime/$id/: index.tsx
src/routes/anime/$id/episode/: $ep.tsx
