[workspace]
members = ["crates/kuriume-provider", "crates/kuriume-mpv", "crates/kuriume-torrent", "crates/kuriume-store"]

[workspace.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Internal crates
kuriume-provider = { path = "crates/kuriume-provider" }
kuriume-mpv = { path = "crates/kuriume-mpv" }
kuriume-torrent = { path = "crates/kuriume-torrent" }
kuriume-store = { path = "crates/kuriume-store" }

[package]
name = "kuriume"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kuriume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
kuriume-provider = { workspace = true }
kuriume-mpv = { workspace = true }
kuriume-torrent = { workspace = true }
kuriume-store = { workspace = true }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSResponder"] }

