[workspace]
members = ["crates/kuriume-provider", "crates/kuriume-mpv", "crates/kuriume-torrent", "crates/kuriume-store", "plugins/tauri-plugin-mpv"]

[workspace.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# Internal crates
kuriume-provider = { path = "crates/kuriume-provider" }
kuriume-mpv = { path = "crates/kuriume-mpv" }
kuriume-torrent = { path = "crates/kuriume-torrent" }
kuriume-store = { path = "crates/kuriume-store" }
tauri-plugin-mpv = { path = "plugins/tauri-plugin-mpv" }

[package]
name = "kuriume"
version = "0.1.1"
description = "An anime aggregation, parsing, and playback app"
authors = ["Twacqwq"]
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kuriume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = "1"
kuriume-provider = { workspace = true }
kuriume-torrent = { workspace = true }
kuriume-store = { workspace = true }
tauri-plugin-mpv = { workspace = true }
tauri-plugin-dialog = "2.6.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"

