[package]
name = "kuriume-provider"
version = "0.1.1"
edition = "2021"
description = "Anime data provider trait and implementations"

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
scraper = "0.22"
